--- a/templates/index-card-health-recommendations.html
+++ b/templates/index-card-health-recommendations.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div class="card-body">
-                <h3 class="text-red card-title">High CO2 concentration</h3>
+                <h3 class="text-red card-title">High CO2 levels (1h)</h3>
                 <p class="">The concentration of CO2 within this indoor space has surpassed safe limits,
                     suggesting inadequate ventilation and posing serious health risks, including headaches, dizziness,
                     and impaired cognitive function, necessitating immediate action to improve air quality.</p>
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="card-body">
-                <h3 class="text-green card-title">Low PMs concentration</h3>
+                <h3 class="text-green card-title">Low PM2.5 levels (1h)</h3>
                 <p class="">The concentration of PMs within your indoor space is in the range of the safe
                     limits, suggesting minimal health risks.</p>
             </div>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="card-body">
-                <h3 class="text-green card-title">Low TVOCs concentration</h3>
+                <h3 class="text-green card-title">Low TVOC levels (1h)</h3>
                 <p class="">The concentration of TVOCs within your indoor space is in the range of the safe
                     limits, suggesting minimal health risks.</p>
             </div>
