--- a/templates/index-pred-co2.html
+++ b/templates/index-pred-co2.html
@@ -4,12 +4,20 @@
     <!-- Steps -->
     <div class="steps">
       <div class="step-item text-center">
-        <div class="mb-2 small text-muted">15-minute ahead forecast</div>
-        <span class="step-indicator text-secondary" id="co2-pred">X</span>
+        <div class="mb-2 small text-muted">1-minute ahead forecast</div>
+        <span class="step-indicator text-secondary" id="co2-pred-1">X</span>
       </div>
       <div class="step-item text-center">
-        <div class="mb-2 small text-muted">1-hour ahead forecast</div>
-        <span class="step-indicator text-secondary" id="hourly-co2-pred">X</span>
+        <div class="mb-2 small text-muted">5-minutes ahead forecast</div>
+        <span class="step-indicator text-secondary" id="co2-pred-5">X</span>
+      </div>
+      <div class="step-item text-center">
+        <div class="mb-2 small text-muted">10-minutes ahead forecast</div>
+        <span class="step-indicator text-secondary" id="co2-pred-10">X</span>
+      </div>
+      <div class="step-item text-center">
+        <div class="mb-2 small text-muted">15-minutes ahead forecast</div>
+        <span class="step-indicator text-secondary" id="co2-pred-15">X</span>
       </div>
     </div>
 
