--- a/templates/index-macros.html
+++ b/templates/index-macros.html
@@ -1,17 +1,27 @@
 {% macro jumbotron(title, subtitle) %}
 <div class="jumbotron jumbotron-fluid pt-2">
-    <div class="container d-flex flex-column align-items-center">
-        <h1 class="mb-4">{{ title }}</h1>
-        <p class="lead">{{ subtitle | safe }}</p>
+  <div class="container d-flex flex-column align-items-center">
+    <div class="d-flex align-items-center mb-4">
+      <h1 class="mb-0">{{ title }}</h1>
     </div>
+    <p class="lead">{{ subtitle | safe }}</p>
+  </div>
 </div>
 {% endmacro %}
 
-{% macro chart(chart_id) %}
-<div class="container-xl">
+{% macro chart(chart_id, status_id=None) %}
+<div class="container-xl position-relative" style="min-height:370px;">
     <div class="row">
         <div class="col-lg-12">
             <div id="{{ chart_id }}"></div>
+            <!-- Status overlay, hidden by default -->
+            <div
+                id="{{ status_id if status_id else chart_id ~ '-status' }}"
+                class="chart-status-overlay"
+            >
+                <span class="pulse-dot"></span>
+                <span id="{{ chart_id ~ '-status-label' }}"></span>
+            </div>
         </div>
     </div>
 </div>
