--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,9 @@
 <script src="{{ url_for('static', filename='js/index-predict-co2.js') }}"></script>
 <script src="{{ url_for('static', filename='js/index-predict-pm25.js') }}"></script>
 
-<script src="{{ url_for('static', filename='js/index-wb-data.js') }}"></script>
+<script src="{{ url_for('static', filename='js/index-pb-data.js') }}"></script>
+
+<script src="{{ url_for('static', filename='js/index-test.js') }}"></script>
 
 <!--<script>-->
 <!--    document.querySelectorAll('[data-bs-toggle="tooltip"]').forEach(el => {-->
