--- a/templates/index-card-health-recommendations.html
+++ b/templates/index-card-health-recommendations.html
@@ -3,12 +3,12 @@
         <div class="card hidden-at-start">
             <div class="card-stamp">
                 <div class="card-stamp-icon bg-red">
-                    <img class="icon" src="{{ url_for('static', filename='icons/mood-sick-white.svg') }}"
+                    <img class="icon" src="{{ url_for('static', filename='icons/iaq-very-unhealthy.svg') }}"
                          alt="Mood Sick">
                 </div>
             </div>
             <div class="card-body">
-                <h3 class="text-red card-title">High CO2 levels (1h)</h3>
+                <h3 class="text-blue card-title">High CO2 levels (1h)</h3>
                 <p class="">The concentration of CO2 within this indoor space has surpassed safe limits,
                     suggesting inadequate ventilation and posing serious health risks, including headaches, dizziness,
                     and impaired cognitive function, necessitating immediate action to improve air quality.</p>
@@ -19,7 +19,7 @@
         <div class="card hidden-at-start">
             <div class="card-stamp">
                 <div class="card-stamp-icon bg-green">
-                    <img class="icon" src="{{ url_for('static', filename='icons/mood-good-white.svg') }}"
+                    <img class="icon" src="{{ url_for('static', filename='icons/iaq-good.svg') }}"
                          alt="Mood Good">
                 </div>
             </div>
@@ -34,7 +34,7 @@
         <div class="card hidden-at-start">
             <div class="card-stamp">
                 <div class="card-stamp-icon bg-green">
-                    <img class="icon" src="{{ url_for('static', filename='icons/mood-good-white.svg') }}"
+                    <img class="icon" src="{{ url_for('static', filename='icons/iaq-moderate.svg') }}"
                          alt="Mood Good">
                 </div>
             </div>
