--- a/templates/profile.html
+++ b/templates/profile.html
@@ -45,8 +45,8 @@
 
                             <!-- Second Row: First Name & Last Name -->
                             <div class="row g-3 mt-3">
-                                {{ floating_input("floating-fname", "fname", "First Name", session['firstName']) }}
-                                {{ floating_input("floating-lname", "lname", "Last Name", session['lastName']) }}
+                                {{ floating_input("floating-fname", "fname", "First Name", session['fName']) }}
+                                {{ floating_input("floating-lname", "lname", "Last Name", session['lName']) }}
                             </div>
 
                             <!-- Third Row: Tenant & Admin -->
