--- a/templates/index.html
+++ b/templates/index.html
@@ -44,25 +44,19 @@
     {{ macros.jumbotron('Indoor Air Quality', 'Monitor IAQ conditions in your immediate surroundings.' ) }}
 
     <div class="page-body">
-        <div class="container-xl">
-            {% include 'index-pred-co2.html' %}
-        </div>
-        {{ macros.chart('index-chart-co2') }}
-        <div class="container-xl">
-            {% include 'index-pred-pm25.html' %}
-        </div>
-        {{ macros.chart('index-chart-pm25') }}
-        {{ macros.chart('index-chart-tvoc') }}
-        {{ macros.chart('index-chart-temp') }}
-        {{ macros.chart('index-chart-rhum') }}
-    </div>
+      <div class="container-xl">
+          {% include 'index-pred-co2.html' %}
+      </div>
 
-    {{ macros.jumbotron('Physiological Parameters', 'Monitor your physiological signals.' ) }}
+      {{ macros.chart('index-chart-co2',  'index-chart-co2-status') }}
 
-    <div class="page-body">
-        <div class="container-xl py-2">
-            {% include "index_wearable.html" %}
-        </div>
+      <div class="container-xl">
+          {% include 'index-pred-pm25.html' %}
+      </div>
+
+      {{ macros.chart('index-chart-pm25', 'index-chart-pm25-status') }}
+
+      {{ macros.chart('index-chart-tvoc', 'index-chart-tvoc-status') }}
     </div>
 
 </div>
